2004-08-05  Mark Kettenis  <kettenis@chello.nl>

	* i386nbsd-tdep.c (i386nbsd_sigtramp_offset): Change argument from
	CORE_ADDR to struct frame_info *.  Use safe_frame_unwind_memory
	instead of deprecated_read_memory_nobpt.
	(i386nbsd_sigtramp_p): Adjust for changed signature of
	i386nbsd_sigtramp_offset.

	* i386obsd-tdep.c (i386obsd_sigtramp_p): Use
	safe_frame_unwind_memory instead of target_read_memory.

	* infptrace.c: Include <sys/file.h> if HAVE_SYS_FILE_H instead of
	!NO_SYS_FILE.
	[KERNEL_U_ADDR_BSD]: Don't include <a.out.h>.
	[KERNEL_U_ADDR_BSD] (kernel_u_addr): Remove variable.
	(_initialize_kernel_u_addr): Remove prototype and function.
	* infttrace.c: Include <sys/file.h> if HAVE_SYS_FILE_H instead of
	!NO_SYS_FILE.
	* xcoffread.c: Likewise.

2004-08-06  Mark Kettenis  <kettenis@gnu.org>

	* vax-nat.c: New file.
	* vaxbsd-nat.c: Tweak comment.
	* Makefile.in (ALLDEPFILES): Add vax-nat.c, vaxbsd-nat.c and
	vaxnbsd-tdep.c.
	(vax-nat.o): New dependency.
	* configure.host (vax-*-bsd*, vax-*-ultrix*): Set gdb_host to vax.
	(vax-*-ultrix2*): Remove.
	* config/vax/vax.mh: New file.
	* config/vax/nm-vax.h (vax_kernel_u_addr): New extern declaration.
	(KERNEL_U_ADDR): Define as vax_kernel_u_addr.
	(vax_register_u_addr): New prototype.
	(REGISTER_U_ADDR): Define using vax_register_u_addr.
	* config/vax/vaxult2.mh: Remove file.
	* config/vax/vaxult.mh: Remove file.
	* config/vax/vaxbsd.mh: Remove file.
	* config/vax/vax.mt (TM_FILE): Remove.
	* config/vax/tm-vaxbsd.h: Remove file.

2004-08-06  Joel Brobecker  <brobecker@gnat.com>

	* aix-thread.c (get_signaled_thread): New function.
	(iter_trap): Delete, no longer used.
	(iter_tid): New function.
	(pd_update): Find the thread that received the SIGTRAP signal
	by first locating the kernel thread, and then finding its
	associated thread.

2004-08-06  Ulrich Weigand  <uweigand@de.ibm.com>

	* lin-lwp.c (child_wait): Continue inferior after processing
	PTRACE_EVENT_CLONE event.
